--- a/Recommender Lab.ipynb
+++ b/Recommender Lab.ipynb
@@ -237,25 +237,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'Index' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-fe47b3f1b4b0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: 'Index' object is not callable"
-     ]
+     "data": {
+      "text/plain": [
+       "Index([u'American Sniper', u'The Hunger Games: Mockingjay - Part 1',\n",
+       "       u'Guardians of the Galaxy', u'The Lego Movie', u'The Hobbit',\n",
+       "       u'Transformers', u'Malificent', u'Big Hero 6', u'Godzilla',\n",
+       "       u'Interstellar', u'How to Train your Dragon 2', u'Gone Girl',\n",
+       "       u'Divergent', u'The Fault in Our Stars', u'Unbroken',\n",
+       "       u'300: Rise of an Empire'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.columns()"
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def pearson(s1, s2):\n",
+    "    \"\"\"Take two pd.Series objects and return a pearson correlation.\"\"\"\n",
+    "    s1_c = s1 - s1.mean()\n",
+    "    s2_c = s2 - s2.mean()\n",
+    "    return np.sum(s1_c * s2_c) / np.sqrt(np.sum(s1_c ** 2) * np.sum(s2_c ** 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_recs(movie_name, M, num):\n",
+    "\n",
+    "    import numpy as np\n",
+    "    reviews = []\n",
+    "    for title in M.columns:\n",
+    "        if title == movie_name:\n",
+    "            continue\n",
+    "        cor = pearson(M[movie_name], M[title])\n",
+    "        if np.isnan(cor):\n",
+    "            continue\n",
+    "        else:\n",
+    "            reviews.append((title, cor))\n",
+    "    \n",
+    "    reviews.sort(key=lambda tup: tup[1], reverse=True)\n",
+    "    return reviews[:num]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 1:  What movie is most Similar to 'The fault in our stars' (60 pts)\n"
    ]
   },
   {
@@ -265,7 +317,10 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "similarmovie= get_recs('The Fault in Our Stars', df, 1)"
+   ]
   }
  ],
  "metadata": {
