--- a/Recommender Lab.ipynb
+++ b/Recommender Lab.ipynb
@@ -434,6 +434,181 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 3: Bonus Question...  For all the movies you haven't seen, can you predict how you'd rate them using your the class reviews? (10 pts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Rohit\\Anaconda2\\lib\\site-packages\\ipykernel\\__main__.py:3: FutureWarning: sort is deprecated, use sort_values(inplace=True) for INPLACE sorting\n",
+      "  app.launch_new_instance()\n"
+     ]
+    }
+   ],
+   "source": [
+    "#i have rated and not rated\n",
+    "mylist = df.ix['Rohit Ukirde']\n",
+    "mylist.sort(ascending=False)\n",
+    "ratings = mylist.index[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Unbroken                 NaN\n",
+       "300: Rise of an Empire   NaN\n",
+       "Name: Rohit Ukirde, dtype: float64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#i have not rated movies are \n",
+    "mylist[mylist.isnull()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### I have not rated 2 movies (Unbroken and 300: Rise of an Empire)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "recommended1= get_recs('Unbroken', df, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('The Fault in Our Stars', 0.17273639371993235)]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recommended1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "recommend2=get_recs('300: Rise of an Empire', df, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Divergent', 0.29880439525455205)]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recommend2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_ratings(movie):\n",
+    "    recommended=get_recs(movie,df,1)\n",
+    "    movie_name=[i[0] for i in recommended]\n",
+    "    movie_rating = df[movie_name].mean()\n",
+    "    rating=(movie,round(movie_rating))\n",
+    "    return rating"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Unbroken', 4.0)\n",
+      "('300: Rise of an Empire', 3.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "notrated=['Unbroken','300: Rise of an Empire']\n",
+    "\n",
+    "for i in notrated:\n",
+    "    rated=get_ratings(i)\n",
+    "    print rated"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "According to the class reviews Unbroken got 4.0 and 300: Rise of an Empire got 3.0 ratings "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
